Adjust padding in form control for file and add padding bottom to app.js to fix footer from overlapping content

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,6 +6,7 @@
 
 .Main {
     padding-top: 81px;
+    padding-bottom: 85px;
 }
 
 h1 {
